--- a/client/main.css
+++ b/client/main.css
@@ -3,7 +3,9 @@
 }
 #code {
   height: 180px;
+  font-family: monospace;
   width: 400px;
   resize: none;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  word-spacing: -1px;
 }
