--- a/client/main.css
+++ b/client/main.css
@@ -1,11 +1,42 @@
-* {
+html, body {
   font-family: sans-serif;
+  margin: 0;
+  padding: 0;
 }
-#code {
-  height: 180px;
+
+.row {
+  display: flex;
+}
+
+.box {
+  width: 50%;
+}
+
+.row .box:first-child {
+  border-right: 1px solid #000000;
+}
+
+.row .box {
+  border-bottom: 1px solid #000000;
+}
+
+p {
+  margin: 0;
+}
+
+.code {
+  height: 40vh;
   font-family: monospace;
-  width: 400px;
+  width: 98%;
+  border: none;
   resize: none;
   font-size: 1.1rem;
-  word-spacing: -1px;
+  word-spacing: -3.5px;
+  outline: none;
+}
+
+iframe {
+  border: none;
+  height: 40vh;
+  width: 98%;
 }
