--- a/client/main.css
+++ b/client/main.css
@@ -2,10 +2,39 @@ html, body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
+  --background: #2b303a;
+  --logo: #d64933;
+  --primary: #d8dad3;
+  --secondary: #f1f2eb;
+  --tertiary: #363d49;
+  --decor: #b5ffe9;
+  --a: #071013;
+  --b: #071013;
+  background-color: var(--background);
+  display: flex;
+}
+
+.logo {
+  width: 10%;
+  background: var(--a);
+  box-shadow: -1px -1px aqua inset;
+}
+
+.logo h1 {
+  transform: translate(5px, 70px) rotateZ(-90deg);
+  color: var(--logo);
+}
+
+.logo h1::after {
+  content: '.';
+  padding-left: 2px;
+  font-size: 2.3rem;
+  color: var(--decor);
 }
 
 .row {
   display: flex;
+  width: 90%;
 }
 
 .box {
@@ -13,26 +42,32 @@ html, body {
 }
 
 .row .box:first-child {
-  border-right: 1px solid #000000;
+  border-right: 1px solid var(--tertiary);
 }
 
 .row .box {
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid var(--tertiary);
 }
 
 p {
-  margin: 0;
+  color: var(--primary);
+  margin: 10px;
+  font-size: 0.8rem;
 }
 
 .code {
-  height: 40vh;
+  height: 99vh;
   font-family: monospace;
+  margin: 0 10px;
   width: 98%;
   border: none;
   resize: none;
-  font-size: 1.1rem;
+  font-size: 0.9rem;
   word-spacing: -3.5px;
+  caret-color: var(--secondary);
+  color: var(--secondary);
   outline: none;
+  background-color: var(--background);
 }
 
 iframe {
